...
                iconColor = iconColor,
            ),

            modifier = Modifier
                .fillMaxWidth()
                .semantics { testTagsAsResourceId = true }
                .testTag("Option")
        )
    }
}

