...
        modifier = Modifier.padding(bottom = 20.dp)
    ) {
        FilledIconButton(
            onClick = { onClick() },
            modifier = Modifier
                .semantics { testTagsAsResourceId = true }
                .testTag("SettingsButton"),
        ) {
            Icon(Icons.Outlined.Settings, contentDescription = null)
        }
    }
}

