appId: com.dendron.quizzer
---
- launchApp:
    clearState: true
- tapOn: "Start"
- runFlow: play.yaml
- tapOn: "Home"
- assertVisible: "Quizzer"
