appId: com.dendron.quizzer
---
- launchApp:
    clearState: true
- tapOn: "Start"
- runFlow: play.yaml
- tapOn: "Play again"
- assertVisible: "Question 1"
- assertVisible: "Check answer"
