appId: com.dendron.quizzer
---
- repeat:
    times: 9
    commands:
      - tapOn:
          id: "Option"
      - tapOn: "Check answer"
      - tapOn: "Next question"
- tapOn:
    id: "Option"
- tapOn: "Check answer"
- tapOn: "Finish"
- assertVisible: "Score"
- assertVisible: "Home"
- assertVisible: "Play again"
