appId: com.dendron.quizzer
---
- launchApp:
    clearState: true
- tapOn:
    id: "SettingsButton"
- runFlow: settings.yaml
- tapOn: "Close"
- assertVisible: "Quizzer"
