appId: com.dendron.quizzer
---
- launchApp:
    clearState: true
- tapOn:
    id: "SettingsButton"
- runFlow: settings.yaml
- tapOn: "Which difficulty?"
- tapOn: "Easy"
- tapOn: "Save"
- assertVisible: "Quizzer"
